src/objects/Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancelled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancelled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled_On__c</fullName>
        <label>Cancelled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Clear_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>a contract was approved, then need to unexecute the contract, this will back out the contract executed date on the account that shows (account agreement)</description>
        <label>Clear Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Number_Agreement_Number__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Contract Number / Agreement Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_Type_Agreement_Type__c</fullName>
        <label>Contract Type / Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WAC</fullName>
                </value>
                <value>
                    <fullName>CIB</fullName>
                </value>
                <value>
                    <fullName>TPS</fullName>
                </value>
                <value>
                    <fullName>ADD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executed_On__c</fullName>
        <label>Executed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>placeholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_to_AX_Reason__c</fullName>
        <label>Sync to AX Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synced_to_AX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced to AX</label>
        <type>Checkbox</type>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <recordTypes>
        <fullName>CIB</fullName>
        <active>true</active>
        <description>For use with CIB Agreements</description>
        <label>CIB</label>
    </recordTypes>
    <recordTypes>
        <fullName>State_Addendum</fullName>
        <active>true</active>
        <description>For use with State Addendum Agreements</description>
        <label>State Addendum</label>
    </recordTypes>
    <recordTypes>
        <fullName>WAC</fullName>
        <active>true</active>
        <description>For use with WAC Agreements</description>
        <label>WAC</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>